[gd_scene load_steps=35 format=3 uid="uid://cd0em0ab4eqxe"]

[ext_resource type="Texture2D" uid="uid://bhnipbooj3wke" path="res://Entities/Enemies/Human MA/Assets/Idle.png" id="1_2fmb6"]
[ext_resource type="Script" path="res://Entities/Enemies/Human MA/human_martial_arts.gd" id="1_cgtcd"]
[ext_resource type="Texture2D" uid="uid://c1ofovsghxife" path="res://Entities/Enemies/Human MA/Assets/Run.png" id="2_kdq62"]
[ext_resource type="Texture2D" uid="uid://cckjoyea8cqam" path="res://Entities/Enemies/Human MA/Assets/Take Hit.png" id="3_gvwds"]
[ext_resource type="Texture2D" uid="uid://cqkeegwhp25vk" path="res://Entities/Enemies/Human MA/Assets/Attack1.png" id="4_ctowk"]
[ext_resource type="Texture2D" uid="uid://okdi0y7idas4" path="res://Entities/Enemies/Human MA/Assets/Death.png" id="6_meq3j"]
[ext_resource type="Texture2D" uid="uid://rurq6srdoomf" path="res://Entities/Enemies/Human MA/Assets/Attack2.png" id="7_g5kv4"]
[ext_resource type="Texture2D" uid="uid://unh46kg3jda3" path="res://Entities/Enemies/Human MA/Assets/Attack3.png" id="8_mej0g"]
[ext_resource type="PackedScene" uid="uid://dc2j6t3nvqnml" path="res://Common/Components Manager/Player Dectection/player_detection_component.tscn" id="9_73k8c"]
[ext_resource type="PackedScene" uid="uid://fk8t8w3u1uxw" path="res://Common/Components Manager/Hurtbox/hurtbox_component.tscn" id="10_qamnc"]
[ext_resource type="PackedScene" uid="uid://dtv2bjicrkjyp" path="res://Common/Components Manager/Damage Zone/damage_zone_component.tscn" id="11_akq4y"]
[ext_resource type="PackedScene" uid="uid://ba60qronxqsgq" path="res://Common/Components Manager/Hitbox/hitbox_component.tscn" id="12_p3c86"]
[ext_resource type="PackedScene" uid="uid://cq88y4mmkn2fq" path="res://Common/Components Manager/Movement/movement_component.tscn" id="13_ty62m"]
[ext_resource type="PackedScene" uid="uid://b4j2jxe1flidv" path="res://Common/Components Manager/Health/health_component.tscn" id="14_7mr4c"]
[ext_resource type="Script" path="res://Common/States/Enemy/Meele/Warden.gd" id="16_00gma"]
[ext_resource type="Script" path="res://Common/States/FiniteStateMachine.gd" id="16_1j51j"]
[ext_resource type="Script" path="res://Common/States/Enemy/Meele/Chase.gd" id="17_iwwhi"]
[ext_resource type="Script" path="res://Entities/Enemies/Human MA/State/Attack.gd" id="18_yqhe1"]
[ext_resource type="Script" path="res://Common/States/Enemy/Meele/Stagger.gd" id="19_h1kgn"]
[ext_resource type="Script" path="res://Common/States/Enemy/Meele/Dead.gd" id="20_ogmph"]

[sub_resource type="Animation" id="Animation_dyyrj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_2fmb6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Components/HitboxComponent/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Components/HurtboxComponent/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6d4qh"]
resource_name = "attack"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ctowk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_320x6"]
resource_name = "attack2"
length = 0.750013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_g5kv4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.375, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ad74w"]
resource_name = "attack3"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_mej0g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.625, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_7m2cy"]
resource_name = "death"
length = 1.37501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_meq3j")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HurtboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l5nem"]
resource_name = "follow"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kdq62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ecjyf"]
resource_name = "idle"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_2fmb6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Components/HitboxComponent/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ikebq"]
resource_name = "stagger"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_gvwds")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.000961959, 0.100962, 0.200962, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HitboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Components/HmaDealDamage/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5o5p6"]
_data = {
"RESET": SubResource("Animation_dyyrj"),
"attack": SubResource("Animation_6d4qh"),
"attack2": SubResource("Animation_320x6"),
"attack3": SubResource("Animation_ad74w"),
"death": SubResource("Animation_7m2cy"),
"follow": SubResource("Animation_l5nem"),
"idle": SubResource("Animation_ecjyf"),
"stagger": SubResource("Animation_ikebq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kcegp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nn4hn"]
radius = 88.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_abqxq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msllq"]
size = Vector2(47.6111, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lwt1"]
size = Vector2(33.0001, 58)

[node name="MartialArtist" type="CharacterBody2D"]
scale = Vector2(0.9, 0.9)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_cgtcd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2fmb6")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5o5p6")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_kcegp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Raycast" type="Node2D" parent="."]
visible = false

[node name="RayCast2DLeftDown" type="RayCast2D" parent="Raycast"]
position = Vector2(-16, 0)
target_position = Vector2(0, 32)

[node name="RayCast2DRightDown" type="RayCast2D" parent="Raycast"]
position = Vector2(16, 0)
target_position = Vector2(0, 32)

[node name="RayCast2DLeft" type="RayCast2D" parent="Raycast"]
target_position = Vector2(-32, 0)

[node name="RayCast2DRigt" type="RayCast2D" parent="Raycast"]
target_position = Vector2(32, 0)

[node name="Components" type="Node2D" parent="."]

[node name="PlayerDetection" parent="Components" instance=ExtResource("9_73k8c")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/PlayerDetection"]
shape = SubResource("CircleShape2D_nn4hn")

[node name="HurtboxComponent" parent="Components" instance=ExtResource("10_qamnc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HurtboxComponent"]
shape = SubResource("CapsuleShape2D_abqxq")

[node name="HmaDealDamage" parent="Components" instance=ExtResource("11_akq4y")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HmaDealDamage"]
position = Vector2(56.1944, -8.88889)
shape = SubResource("RectangleShape2D_msllq")
disabled = true

[node name="HitboxComponent" parent="Components" instance=ExtResource("12_p3c86")]
visible = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HitboxComponent"]
position = Vector2(48.8889, -8.88889)
shape = SubResource("RectangleShape2D_6lwt1")

[node name="MovementComponent" parent="Components" instance=ExtResource("13_ty62m")]
speed = 30.0

[node name="HealthComponent" parent="Components" instance=ExtResource("14_7mr4c")]
health_max = 50

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("16_1j51j")

[node name="Warden" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("raycast_left_down", "raycast_right_down", "raycast_left", "raycast_right")]
script = ExtResource("16_00gma")
raycast_left_down = NodePath("../../Raycast/RayCast2DLeftDown")
raycast_right_down = NodePath("../../Raycast/RayCast2DRightDown")
raycast_left = NodePath("../../Raycast/RayCast2DLeft")
raycast_right = NodePath("../../Raycast/RayCast2DRigt")

[node name="Chase" type="Node" parent="FiniteStateMachine"]
script = ExtResource("17_iwwhi")

[node name="Attack" type="Node" parent="FiniteStateMachine"]
script = ExtResource("18_yqhe1")

[node name="Stagger" type="Node" parent="FiniteStateMachine"]
script = ExtResource("19_h1kgn")

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource("20_ogmph")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="player_detected" from="Components/PlayerDetection" to="." method="_on_player_detected"]
[connection signal="player_lost" from="Components/PlayerDetection" to="." method="_on_player_lost"]
[connection signal="hit_detected" from="Components/HurtboxComponent" to="." method="_on_hit_detected"]
[connection signal="area_entered" from="Components/HmaDealDamage" to="." method="_on_hma_deal_damage_area_entered"]
[connection signal="damage_zone_entered" from="Components/HitboxComponent" to="." method="_on_damage_zone_entered"]
[connection signal="damage_zone_exited" from="Components/HitboxComponent" to="." method="_on_damage_zone_exited"]
